# fastapi_pyo3_rust_txtpro

./: .gitignore  LICENSE  Makefile  README.md  requirements-dev.txt  requirements.txt
app/: main.py  models.py  pyproject.toml  services.py
examples/: basic_usage.py  batch_processing.py  performance_demo.py  sentiment_demo.py
tests/: conftest.py  test_api.py  test_integration.py  test_performance.py  test_rust_extension.py  test_sentiment.py  test_services.py
text_processor_rust/: Cargo.toml  pyproject.toml
text_processor_rust/src/: lib.rs  sentiment.rs
text_processor_rust/src/sentiment/: analyzer.rs  dictionary.rs  rules.rs  tokenizer.rs
