[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "app" 
version = "0.1.0"  
description = "FastAPI application with Rust extensions for high-performance text processing"
requires-python = ">=3.8"  

[tool.setuptools.packages.find]
where = ["."] 