[package]
name = "text_processor_rust"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Fast text processing extension written in Rust"

[lib]
name = "text_processor_rust"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.20", features = ["extension-module"] }
regex = "1.10"
rayon = "1.8"  # For parallel processing
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
lazy_static = "1.4"
unicode-segmentation = "1.10"
jieba-rs = "0.6"  # hinese text segmentation
once_cell = "1.19"  

[profile.dev]
opt-level = 3