[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "text_processor_rust"
version = "0.1.0"
description = "FastAPI application with Rust extensions for high-performance text processing"
authors = [{name = "Rafa_PyRs.dev", email = "rafagr98.dev@gmail.com"}]
license = {text = "MIT"}
requires-python = ">=3.8"

[tool.maturin]
features = ["pyo3/extension-module"]